# end_to_end-data-engineer

./: README.md  pyproject.toml
.env/: pyvenv.cfg
instrucoes/: terraform.md
terraform/: main.tf  terraform.tfstate  variable.tf
tests/: test_end_to_end_data_engineer.py
